--- a/Art/src/main/java/main/Farm.form
+++ b/Art/src/main/java/main/Farm.form
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="main.Farm">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel2" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="694" height="914"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-351204"/>
+      <enabled value="true"/>
+    </properties>
     <border type="none"/>
     <children>
-      <component id="7d9f8" class="javax.swing.JButton" binding="chooseFileButton" default-binding="true">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Choose file"/>
-        </properties>
-      </component>
       <hspacer id="1175c">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -24,9 +19,11 @@
       <grid id="790c9" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-351204"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="2e4cc" class="javax.swing.JLabel">
@@ -34,14 +31,16 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="Ravie" size="48" style="2"/>
               <text value="Absoplute difficulty:"/>
             </properties>
           </component>
-          <component id="7c449" class="javax.swing.JLabel">
+          <component id="7c449" class="javax.swing.JLabel" binding="absd">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="Ravie" size="48" style="2"/>
               <text value="answer"/>
             </properties>
           </component>
@@ -50,15 +49,17 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="Rage Italic" size="48" style="2"/>
               <text value="Relative difficulty:"/>
             </properties>
           </component>
-          <component id="77075" class="javax.swing.JLabel">
+          <component id="77075" class="javax.swing.JLabel" binding="reld">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Label"/>
+              <font name="Rage Italic" size="48" style="2"/>
+              <text value="answer"/>
             </properties>
           </component>
           <component id="c1103" class="javax.swing.JLabel">
@@ -66,19 +67,31 @@
               <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <font name="BeckettKanzleiCY" size="48" style="0"/>
               <text value="Max depth:"/>
             </properties>
           </component>
-          <component id="7783" class="javax.swing.JLabel">
+          <component id="7783" class="javax.swing.JLabel" binding="maxd">
             <constraints>
               <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Label"/>
+              <font name="BeckettKanzleiCY" size="48"/>
+              <text value="answer"/>
             </properties>
           </component>
         </children>
       </grid>
+      <component id="7d9f8" class="javax.swing.JButton" binding="chooseFileButton" default-binding="true">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-15030440"/>
+          <foreground color="-15030440"/>
+          <text value="Choose file"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
