--- a/Art/src/main/java/main/Furm.form
+++ b/Art/src/main/java/main/Furm.form
@@ -8,14 +8,6 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="48153" class="javax.swing.JTable" binding="table3" default-binding="true">
-        <constraints>
-          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="83ee8" class="javax.swing.JButton" binding="chooseFileButton" default-binding="true">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -48,57 +40,93 @@
           <text value="I/O Chepin metrics"/>
         </properties>
       </component>
-      <scrollpane id="b2591">
+      <grid id="eb177" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <horizontalScrollBarPolicy value="32"/>
-          <verticalScrollBarPolicy value="22"/>
-        </properties>
+        <properties/>
         <border type="none"/>
         <children>
-          <component id="a7b99" class="javax.swing.JTable" binding="table1" default-binding="true">
-            <constraints/>
+          <scrollpane id="b2591">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
             <properties>
-              <autoResizeMode value="0"/>
-              <autoscrolls value="true"/>
-              <dragEnabled value="false"/>
-              <fillsViewportHeight value="false"/>
+              <horizontalScrollBarPolicy value="32"/>
+              <verticalScrollBarPolicy value="20"/>
             </properties>
-          </component>
+            <border type="none"/>
+            <children>
+              <component id="a7b99" class="javax.swing.JTable" binding="table1" default-binding="true">
+                <constraints/>
+                <properties>
+                  <autoResizeMode value="0"/>
+                  <autoscrolls value="true"/>
+                  <dragEnabled value="false"/>
+                  <fillsViewportHeight value="false"/>
+                  <font name="Consolas"/>
+                  <preferredScrollableViewportSize width="450" height="32"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
         </children>
-      </scrollpane>
-      <scrollpane id="4e915" binding="sp2">
+      </grid>
+      <grid id="a0fa5" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <horizontalScrollBarPolicy value="30"/>
-        </properties>
+        <properties/>
         <border type="none"/>
         <children>
-          <component id="cd025" class="javax.swing.JTable" binding="table2" default-binding="true">
-            <constraints/>
-            <properties>
-              <alignmentX value="0.5"/>
-              <autoCreateColumnsFromModel value="true"/>
-              <autoCreateRowSorter value="false"/>
-              <autoResizeMode value="4"/>
-              <autoscrolls value="true"/>
-              <fillsViewportHeight value="false"/>
-              <focusCycleRoot value="false"/>
-              <inheritsPopupMenu value="false"/>
-              <intercellSpacing width="1" height="1"/>
-              <maximumSize width="2147483647" height="32"/>
-              <minimumSize width="30" height="32"/>
-              <preferredScrollableViewportSize width="450" height="400"/>
-              <preferredSize width="150" height="32"/>
-              <surrendersFocusOnKeystroke value="false"/>
-            </properties>
-          </component>
+          <scrollpane id="ed1e1" binding="sp3">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="48153" class="javax.swing.JTable" binding="table3" default-binding="true">
+                <constraints/>
+                <properties>
+                  <autoResizeMode value="0"/>
+                  <font name="Consolas"/>
+                  <preferredScrollableViewportSize width="450" height="32"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
         </children>
-      </scrollpane>
+      </grid>
+      <grid id="844a3" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <scrollpane id="78bb8">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="ba285" class="javax.swing.JTable" binding="table2">
+                <constraints/>
+                <properties>
+                  <autoResizeMode value="0"/>
+                  <font name="Consolas"/>
+                  <preferredScrollableViewportSize width="450" height="32"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
